# lambda-cases

./: .gitignore  .tasks  Makefile  README.md  hello_world.lc  notes.txt
.other/: notes.txt  parsec_adventures.hs  predefined.txt  questions.txt  structure.txt  to_do.txt  to_do_big_picture.txt  to_do_next.txt
.tasks/: .order  big_picture  later  now
Docs/: README.md  definitions.txt  notes.txt  syntactic_sugar.txt  tuple_type_examples.txt  type_examples.txt
Examples/: extended_euclidean.lc  functor.case  list_functor.lc  magma.case  magma.lc  or_type.case  or_type.lc  pair_type.case  pair_type.lc  type_predicate.case  type_predicate.lc
NeedUpdating/: grammar.txt
Parsers/: README.md  ee.hs  extended_euclidean.lc  temp.hs
PredefImports/: OpsInHaskell.hs  Predefined.hs
description/: README.md  initial_module.txt
docs/: README.md  import.txt  initial_module.txt  notes.txt  tuple_type_examples.txt  type_examples.txt
documentation/: code_structure  full_grammar.ebnf  general_idea
examples/: README.md  basic_tuple_types.lc  bin_search.lc  bsort.lc  dfs.lc  dijkstra.lc  ee_no_tuple_type.lc  extended_euclidean.lc  extended_euclidean_no_types.lc  fib.lc  gcd.lc  gcd_small.lc  hanoi.lc  hello_world.lc  list_functor.lc  magma.lc  ops.lc  or_type.lc  predefined.lc  reverse.lc  subset_sum.lc  theorem.lc  topo_sort.lc  union_find.hs  union_find.lc
experiments/: bin_search.lc
haskell_generation/: .dirsinvim  .gitignore  .paths  .pathsinvim  CHANGELOG.md  GenerateHaskell.hs  Helpers.hs  Main.hs  README.md  example.hs  haskell_generation.cabal
haskell_generation/CodeGenerators/: ErrorMessages.hs  LowLevel.hs  LowLevelExpressions.hs  Types.hs  ValueExpressions.hs  Values.hs
haskell_generation/CodeGenerators/LowLevel/: Expressions.hs  Helpers.hs
haskell_generation/HaskellTypes/: Generation.hs  LowLevel.hs  Types.hs  Values.hs
haskell_generation/IOfiles/: euclidean.lc  example.hs  example.lc  example1.hs  example1.lc  haskell_code_header.hs  temp.hs  temp.lc
haskell_generation/Parsers/: LowLevel.hs  Types.hs  Unfinished.hs  ValueExpressions.hs  Values.hs
haskell_generation/Parsers/LowLevel/: Expressions.hs
haskell_generation/app/: Main.hs
haskell_generation/app/CodeGenerators/: ErrorMessages.hs  Types.hs
haskell_generation/app/HaskellTypes/: Generation.hs  LowLevel.hs  Types.hs  Values.hs
haskell_generation/app/Parsers/: LowLevel.hs  Types.hs  Values.hs
haskell_generation/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell_generation/executables/correct/: bool  ext_euc_no_tuple_type  ext_euc_tuple_type  int_list  int_list2  int_list3  my_gcd  pair  possibly_int
haskell_generation/files/: example.hs  example.lc  haskell_code_header.hs
haskell_generation/generated_haskell/: basic_or_types.hs  bool.hs  ext_euc_no_tuple_type.hs  ext_euc_tuple_type.hs  my_gcd.hs  pair.hs
haskell_generation/haskell/correct/: bool.hs  ext_euc_no_tuple_type.hs  ext_euc_tuple_type.hs  hanoi.hs  int_list.hs  int_list2.hs  int_list3.hs  map.hs  my_gcd.hs  pair.hs  possibly_int.hs
haskell_generation/haskell/wrong/: out_of_scope.hs
haskell_generation/haskell_headers/: haskell_code_header.hs
haskell_generation/lcases/: basic_or_types.lc  bool.lc  int_or_string.lc  ok.lc  or_t.lc  pair.lc
haskell_generation/lcases/correct/: bool.lc  char.lc  ext_euc_no_tuple_type.lc  ext_euc_tuple_type.lc  hanoi.lc  int_list.lc  int_list2.lc  int_list3.lc  map.lc  my_gcd.lc  pair.lc  possibly_int.lc  string.lc
haskell_generation/lcases/experiments/: bool.lc  ext_euc_no_tuple_type.lc  ext_euc_tuple_type.lc  hanoi.lc
haskell_generation/lcases/future/correct/: add1add2.lc  id.lc  middle_paren.lc  sum_triple.lc
haskell_generation/lcases/future/wrong/: id.lc  unknown_type.lc
haskell_generation/lcases/wrong/: add_err.lc  bool.lc  dup_int_case.lc  duplicate.lc  equ_err.lc  func_t_use_fields.lc  int_str.lc  not_covered.lc  not_func.lc  not_func2.lc  not_func3.lc  or_t_use_fields.lc  out_of_scope.lc  out_of_scope2.lc  out_of_scope3.lc  out_of_scope4.lc  out_of_scope5.lc  type_check_err.lc  wrong_int_case.lc
haskell_generation/src/: .paths  Helpers.hs  InitialState.hs  Main.hs  Script.hs
haskell_generation/src/AfterParsing/: Conversions.hs  Types.hs
haskell_generation/src/CodeGenerators/: ErrorMessages.hs  LowLevel.hs  LowLevelTypes.hs  LowLevelValues.hs  OperatorValues.hs  TypeChecking.hs  TypeDefinitions.hs  Types.hs  Values.hs
haskell_generation/src/Conversions/: Scheme.hs  TypeDefinitions.hs  Types.hs  Values.hs
haskell_generation/src/Experimental/: FreeVars.hs  Indent.hs  Types2.hs  file.txt
haskell_generation/src/Generation/Final/: LowLevel.hs  OperatorValues.hs  TypeDefinitions.hs  Values.hs
haskell_generation/src/Generation/Helpers/: CheckCases.hs  ErrorMessages.hs  Helpers.hs  TypeChecking.hs
haskell_generation/src/Generation/State/: InitialState.hs  TypesAndOperations.hs
haskell_generation/src/GenerationHelpers/: CheckCases.hs  ErrorMessages.hs  Helpers.hs  TypeChecking.hs
haskell_generation/src/GenerationState/: InitialState.hs  TypesAndOperations.hs
haskell_generation/src/HaskellTypes/: AfterParsing.hs  Generation.hs  LowLevel.hs  LowLevelTypes.hs  TypeDefinitions.hs  Types.hs  Values.hs
haskell_generation/src/IntermediateTypes/: TypeDefinitions.hs  Types.hs  Values.hs
haskell_generation/src/Parsers/: LowLevel.hs  LowLevelTypes.hs  LowLevelValues.hs  OperatorValues.hs  TypeDefinitions.hs  Types.hs  Values.hs
haskell_generation/src/Parsing/Parsers/: Helpers.hs  LowLevel.hs  OperatorValues.hs  TypeDefinitions.hs  Types.hs  Values.hs  notes.txt
haskell_generation/src/Parsing/Types/: LowLevel.hs  OperatorValues.hs  TypeDefinitions.hs  Types.hs  Values.hs  notes.txt
haskell_generation/src/ParsingTypes/: LowLevel.hs  LowLevelTypes.hs  LowLevelValues.hs  OperatorValues.hs  TypeDefinitions.hs  Types.hs  Types2.hs  Values.hs  notes.txt
new_parser/: .gitignore  ASTTypes.hs  HaskellGeneration.hs  ParseProgram.hs  Parsers.hs  ShowInstances.hs  Testing.hs  identifiers.txt  literals.txt  (+2 more)
(+450 files in other folders)
