cabal-version:      3.0
name:               haskell-generation
version:            0.1.0.0
synopsis:           generating haskell code from lambda-cases code
-- description:
license:            GPL-2.0-only
license-file:       LICENSE
author:             Dimitris Saridakis
maintainer:         saridakisbitos@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- Extra source files to be distributed with the package, such as examples, or
-- a tutorial module.
-- extra-source-files:

executable haskell_generation
    hs-source-dirs:     src
    main-is:            Main.hs
    other-modules:      Helpers,

                        ParsingTypes.LowLevel, ParsingTypes.Types,
                        ParsingTypes.Types2,
                        ParsingTypes.TypeDefinitions, ParsingTypes.OperatorValues,
                        ParsingTypes.Values,

                        Parsers.LowLevel, Parsers.Types, Parsers.TypeDefinitions,
                        Parsers.OperatorValues, Parsers.Values,

                        IntermediateTypes.Types, IntermediateTypes.TypeDefinitions,
                        IntermediateTypes.Values,

                        Conversions.Types,
                        Conversions.Scheme,
                        Conversions.TypeDefinitions,
                        Conversions.Values,

                        GenerationState.InitialState,
                        GenerationState.TypesAndOperations,

                        GenerationHelpers.TypeChecking,
                        GenerationHelpers.ErrorMessages,
                        GenerationHelpers.Helpers,
                        GenerationHelpers.CheckCases,

                        CodeGenerators.TypeDefinitions,
                        CodeGenerators.LowLevel, CodeGenerators.OperatorValues,
                        CodeGenerators.Values

    build-depends:      base, parsec, mtl, containers, transformers, 
                        process
    default-language:   Haskell2010
    import:             warnings
    default-extensions: LambdaCase

common warnings
    ghc-options: -Wall
